--- a/styles/app.scss
+++ b/styles/app.scss
@@ -132,12 +132,12 @@
     height: auto;
   }
 
-  h1:hover,
-  h2:hover {
-    a {
-      visibility: visible;
-    }
-  }
+  // h1:hover,
+  // h2:hover {
+  //   a {
+  //     visibility: visible;
+  //   }
+  // }
 }
 
 .font-sim {
