--- a/styles/app.scss
+++ b/styles/app.scss
@@ -26,7 +26,6 @@
   }
 
   h1 {
-    margin-bottom: 2rem;
     line-height: 3rem;
   }
 
@@ -143,6 +142,10 @@
   font-weight: 600;
 }
 
-// .invisible {
-//   visibility: hidden !important;
-// }
+a {
+  .btn-copy-link {
+    .invisible {
+      visibility: hidden;
+    }
+  }
+}
