--- a/styles/index.scss
+++ b/styles/index.scss
@@ -41,6 +41,12 @@
 
 @font-face {
     font-family: "MerriweatherSans";
+    src: url("../public/fonts/MerriweatherSans-Regular.ttf");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "MerriweatherSans";
     src: url("../public/fonts/MerriweatherSans-Light.ttf");
     font-weight: 300;
 }
