update font color

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -39,6 +39,7 @@
 
   h3 {
     font-size: 1.5rem;
+    color: rgb(99 102 241);
   }
 
   p {
@@ -63,6 +64,7 @@
   h1 {
     font-size: 2.25em;
     margin-top: 0;
+    color: rgb(99 102 241);
   }
 
   h2 {
