--- a/styles/app.scss
+++ b/styles/app.scss
@@ -111,6 +111,7 @@
 
   li {
     font-family: MerriweatherSans;
+    color: rgba(245, 71, 115, var(--tw-text-opacity));
     margin-bottom: 0;
     margin-top: 0;
   }
